--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body {
           	<img src="/underconstruction.png">
             <h1 class="cover-heading">Under Construction</h1>
             <p class="lead">Our website is under construction. We`ll be here soon with our new awesome site.</p>
-            <p>info@besuredevelopers.com</p>
+            <p>contact@gopanel.cf</p>
            
           </div>
 
